2009-07-24  vadim  <vadim@vk.crocodile.org>

	* Rule.cpp (PolicyRule::getBranch): fixed problem #4 "GUI crash
	when setting action to be a chain." reported in the bug #2826765:
	"problems and suggestions for 3.1.0-b1187". The GUI crashed when
	policy rule in the cluster policy was set to action "Chain".

2009-07-17  vadim  <vadim@vk.crocodile.org>

	* Resources.cpp (Resources::getResourceStrList): This function
	provides a way to create lists of parameters in resource files.

2009-07-16  vadim  <vadim@vk.crocodile.org>

	* FWObjectDatabase_11.xslt: Bumped data file format to 12; system
	group "Clusters" moves to the top level of the tree. Fixes #167

2009-07-13  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler.cpp (checkForZeroAddr::findZeroAddress): followup
	for bug #2820152: AddressRange object has an address but no
	netmask. Have to check for getNetmaskPtr() == NULL where
	necessary.

2009-07-11  vadim  <vadim@vk.crocodile.org>

	* AddressRange.h (libfwbuilder): fixed bug #2820152: "Address
	ranges and other such need IPv4/v6 typing". AddressRange object
	should be recognized and removed from the rule if it is used in
	ipv6 rule set. To do this, add virtual method
	hasInetAddress() (should return true) to indicate that this object
	has an address. This works since virtual method getAddressPtr()
	has been implemented anyway.

	* VERSION (VERSION): started v3.0.6 in the current production branch

2009-07-09  Vadim Kurland  <vadim@vk.crocodile.org>

	* Compiler_cluster.cpp (Compiler::populateClusterElements): user
	can now add loopback interface to the cluster object and use it in
	rules. This interface does not have failover group and has the
	usual 127.0.0.1/8 ip address. refers #163

2009-06-28  Vadim Kurland  <vadim@vk.crocodile.org>

	* Firewall.cpp (Firewall::getIntrfacesByType()): Simple method to
	get a list of pointers to all intrfaces of given type.

        * Compiler_cluster.cpp (Compiler::processFailoverGroup): fixes